Fix:Fix label equal spacing issue from left and right for all screen sizes

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -331,7 +331,7 @@ fieldset,textarea{
 }
 #sign-up-form{
     position: absolute;
-    top: 15%;
+    /* top: 15%; */
     /* Fix as per discussion with mentor (change # 16, fix # 29): Change the Sign up for interface as it dosen't look good as per user point of view*/
     /* background-color: rgba(26, 14, 14, 0.6) ; */
     /* color: #ffffff; */
@@ -340,13 +340,18 @@ fieldset,textarea{
     height: fit-content;
     padding: 30px;
     border: 10px solid #633B48;
-    left: 35%;
+    /* left: 35%; */
     font-family: 'quicksand', sans-serif;
     font-size: xx-large;
     border-radius: 20px;
     /* Fix as per discussion with mentor (change # 16, fix # 29): Change the Sign up for interface as it dosen't look good as per user point of view, give shadow box effect as told by mentor*/
     /* https://getcssscan.com/css-box-shadow-examples */
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    /* Fix as per discussion with mentor (change # 17, fix # 30): The label was not actually giving equal sapce from both left and right, below is the code for fixing it*/
+    /* Code By Mentor: Below is the code of how to fix a label givng it equal space from left and right no matter the screen size */
+    top: 50%;
+    transform: translate(-50%, -50%);
+    left: 49%
 }
 #sign-up-form > h2 {
     font-family: 'Dancing Script', sans-serif;
@@ -415,7 +420,6 @@ fieldset,textarea{
     #sign-up-form{
         width: 65%;
         height: fit-content;
-        left: 5%;
     }
 }
  /* Fix 5:Fix nav bar moving below logo issue for tablet screen */
